--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<html>
+<!doctype html>
+<html lang="en">
     <head>
         <title>Matthew Dunn</title>
         <link rel="stylesheet" href="styles.css">
