--- a/Contact/index.html
+++ b/Contact/index.html
@@ -1,4 +1,5 @@
-<html>
+<!doctype html>
+<html lang="en">
     <head>
         <title>Contact Me</title>
         <link href="./styles.css" rel="stylesheet">
