--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
                 Ma<a class ="hidden_link" href="https://www.chess.com/home">t</a>thew Dunn <a class ="hidden_link" href="https://www.chess.com/home"></a>
             </h1>
 
-            <!--<img alt="wok" src="./images/image.jpg" style="height:100%; width:100%; margin-left:25px; margin-right:25px; margin-top: 15px;">-->
+            <img alt="wok" src="./images/image.jpg" style="height:100%; width:100%; margin-left:25px; margin-right:25px; margin-top: 15px;">
         </body>
 </html>
