--- a/index.html
+++ b/index.html
@@ -11,15 +11,11 @@
                         <li><a class="cta" href="#"><Button>Home</Button></a></li>
                         <li><a href="https://www.paypal.com/paypalme/matthewdunnn" alt="PayPal" target="blank">Donate</a></li>
                         <li><a href="https://www.twitch.tv/maffooBoyz" alt="Twitch" target="blank">Twitch</a></li>
-                        <li><a href="./Projects/index.html">About</a></li>
+                        <li><a href="../--- page/index.html">Testing</a></li>
                     </ul>
                 </nav>
                 <a class="cta" href="./Contact/index.html"><Button>Contact me</Button></a>
             </header>
-            <h1 class="title">
-                Ma<a class ="hidden_link" href="https://www.chess.com/home">t</a>thew Dunn <a class ="hidden_link" href="https://www.chess.com/home"></a>
-            </h1>
-
-            <!--<img alt="wok" src="./images/image.jpg" style="height:100%; width:100%; margin-left:25px; margin-right:25px; margin-top: 15px;">-->
+            <!--<h1 class="title">Ma<a class ="hidden_link" href="https://www.chess.com/home">t</a>thew Dunn</h1>-->
         </body>
 </html>
