--- a/Projects/index.html
+++ b/Projects/index.html
@@ -1,17 +1,16 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html>
     <head>
-        <title>
-            About Me
-        </title>
-        <link rel="stylesheet" href="./styles.css">
+        <title>test</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <h1 class="text">
-            Welcome to the About me tab
-        </h1>
-        <div>
-            <a href="../index.html"><button>Back to home</button></a>
-        </div>
+        <header>
+            <nav>
+                <ul class="link">
+                    <li><a href="../Home/index.html">Testing</a></li>
+                </ul>
+            </nav>
+        </header>
     </body>
 </html>
