--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
                         <li><a class="cta" href="#"><Button>Home</Button></a></li>
                         <li><a href="https://www.paypal.com/paypalme/matthewdunnn" alt="PayPal" target="blank">Donate</a></li>
                         <li><a href="https://www.twitch.tv/maffooBoyz" alt="Twitch" target="blank">Twitch</a></li>
-                        <li><a href="../--- page/index.html">Testing</a></li>
+                        <li><a href="/Projects/index.html">Testing</a></li>
                     </ul>
                 </nav>
                 <a class="cta" href="./Contact/index.html"><Button>Contact me</Button></a>
