--- a/Projects/index.html
+++ b/Projects/index.html
@@ -8,7 +8,7 @@
         <header>
             <nav>
                 <ul class="link">
-                    <li><a href="../Home/index.html">Testing</a></li>
+                    <li><a href="https://www.youtube.com" target="blank">Testing</a></li>
                 </ul>
             </nav>
         </header>
