--- a/Contact/index.html
+++ b/Contact/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <title>Contact Me</title>
-        <link href="./styles.css" rel="stylesheet">
+        <link href="../styles.css" rel="stylesheet">
     </head>
     <body>
         <header>
