--- a/Contact/index.html
+++ b/Contact/index.html
@@ -11,7 +11,7 @@
                     <li><a class="cta" href="../index.html"><Button>Home</Button></a></li>
                     <li><a href="https://www.paypal.com/paypalme/matthewdunnn" alt="PayPal" target="blank">Donate</a></li>
                     <li><a href="https://www.twitch.tv/maffooBoyz" alt="Twitch" target="blank">Twitch</a></li>
-                    <li><a href="../Projects/index.html">About</a></li>
+                    <li><a href="../Projects/index.html">Testing, but on the contact page</a></li>
                 </ul>
             </nav>
             <a class="cta" id="Contact" href="#"><Button>Contact me</Button></a>
