--- a/Projects/index.html
+++ b/Projects/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>test</title>
+        <title>Test</title>
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <header>
             <nav>
                 <ul class="link">
-                    <li><a href="https://www.youtube.com" target="blank">Testing</a></li>
+                    <li><a href="https://www.youtube.com" target="_blank">Testing</a></li>
                 </ul>
             </nav>
         </header>
