--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
                 <a class="cta" href="./Contact/index.html"><Button>Contact me</Button></a>
             </header>
             <!--<h1 class="title">Ma<a class ="hidden_link" href="https://www.chess.com/home">t</a>thew Dunn</h1>-->
-            <iframe style="position: relative; top: 15px; left: 15px" src="https://open.spotify.com/embed/playlist/1TrxLqhOZ5hIpzhzxGKwet" width="390" height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+            <iframe style="position: relative; top: 15px; left: 15px; align-items: center" src="https://open.spotify.com/embed/playlist/1TrxLqhOZ5hIpzhzxGKwet" width="400" height="480" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
         </body>
 </html>
