--- a/Projects/index.html
+++ b/Projects/index.html
@@ -8,7 +8,7 @@
         <header>
             <nav>
                 <ul class="link">
-                    <li><a href="https://www.youtube.com" target="_blank">Testing</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">Testing</a></li>
                 </ul>
             </nav>
         </header>
