--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Matthew Dunn</title>
         <link rel="stylesheet" href="styles.css">
-        <link rel="shortcut icon" href="./favicon.png" />
+        <link rel="shortcut icon" href="./bin.png" />
     </head>
         <body>
             <header>
