--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
             </header>
             <!--<h1 class="title">Ma<a class ="hidden_link" href="https://www.chess.com/home">t</a>thew Dunn</h1>-->
             <iframe style="position: relative; top: 15px; left: 15px; align-items: center" src="https://open.spotify.com/embed/playlist/1TrxLqhOZ5hIpzhzxGKwet" width="400" height="480" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+            <h1 style="font-family: "Montserrat", sans-serif; font-size: 30px; color: #edf0f1; float: right">Matthew Dunn</h1>
         </body>
 </html>
