--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
                 <a class="cta" href="./Contact/index.html"><Button>Contact me</Button></a>
             </header>
             <!--<h1 class="title">Ma<a class ="hidden_link" href="https://www.chess.com/home">t</a>thew Dunn</h1>-->
-            <iframe style="position: relative; top: 15px; left: 15px; align-items: center" src="https://open.spotify.com/embed/playlist/1TrxLqhOZ5hIpzhzxGKwet" width="400" height="480" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-            <h1 style="font-family: "Montserrat", sans-serif; font-size: 30px; color: #edf0f1; float: right">Matthew Dunn</h1>
+            <div>
+                <iframe style="position: relative; top: 15px; left: 15px; align-items: center" src="https://open.spotify.com/embed/playlist/1TrxLqhOZ5hIpzhzxGKwet" width="400" height="480" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                <h1 style="font-family: "Montserrat", sans-serif; font-size: 30px; color: white; float: right; position: relative; top: 15px; left: 15px;">Matthew Dunn</h1>
+            </div>
         </body>
 </html>
