--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <!--<h1 class="title">Ma<a class ="hidden_link" href="https://www.chess.com/home">t</a>thew Dunn</h1>-->
             <div>
                 <iframe style="position: relative; top: 15px; left: 15px; align-items: center" src="https://open.spotify.com/embed/playlist/1TrxLqhOZ5hIpzhzxGKwet" width="400" height="480" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-                <h1 id="header1" style="sans-serif; font-size: 60px; color: white; float: right; position: relative; top: 15px; left: 15px;">Matthew Dunn</h1>
+                <h1 id="header1" style="sans-serif; font-size: 60px; color: white; position: relative; top: 15px; left: 15px;">Matthew Dunn</h1>
             </div>
         </body>
 </html>
