--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
             <header>
                 <nav>
                     <ul class="nav_links">
-                        <li><a class="cta" href="#"><Button>Home</Button></a></li>
+                        <li><a class="cta" href="#"><Button alt="Home">Home</Button></a></li>
                         <li><a href="https://www.paypal.com/paypalme/matthewdunnn" alt="PayPal" target="blank">Donate</a></li>
                         <li><a href="https://www.twitch.tv/maffooBoyz" alt="Twitch" target="blank">Twitch</a></li>
-                        <li><a href="./Projects/index.html">Testing</a></li>
+                        <li><a href="./Projects/index.html" alt ="Testing">Testing</a></li>
                     </ul>
                 </nav>
-                <a class="cta" href="./Contact/index.html"><Button>Contact me</Button></a>
+                <a class="cta" href="./Contact/index.html" alt="Contact me"><Button>Contact me</Button></a>
             </header>
             <!--<h1 class="title">Ma<a class ="hidden_link" href="https://www.chess.com/home">t</a>thew Dunn</h1>-->
             <!--<div>
