--- a/Contact/index.html
+++ b/Contact/index.html
@@ -16,5 +16,8 @@
             </nav>
             <a class="cta" id="Contact" href="#"><Button>Contact me</Button></a>
         </header>
+        <div>
+            <img src="./me.jpg">
+        </div>
     </body>
 </html>
