--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <title>Matthew Dunn</title>
+        <title>Matthew Dunn | Home</title>
         <link rel="stylesheet" href="styles.css">
         <link rel="shortcut icon" href="./me.png" />
     </head>
@@ -9,18 +9,29 @@
             <header>
                 <nav>
                     <ul class="nav_links">
-                        <li><a class="cta" href="#"><Button alt="Home">Home</Button></a></li>
-                        <li><a href="https://www.paypal.com/paypalme/matthewdunnn" alt="PayPal" target="blank">Donate</a></li>
-                        <li><a href="https://www.twitch.tv/maffooBoyz" alt="Twitch" target="blank">Twitch</a></li>
-                        <li><a href="./Projects/index.html" alt ="Testing">Testing</a></li>
+                        <li><a id="home_button" href="#"><Button alt="Home">Home</Button></a></li>
+                        <li><a id="depresso_mode" class="cta" href="https://www.paypal.com/paypalme/matthewdunnn" alt="PayPal" target="blank">Donate</a></li>
+                        <li><a class="cta" href="https://www.twitch.tv/maffooBoyz" alt="Twitch" target="blank">Twitch</a></li>
+                        <li><a class="cta" href="./Projects/index.html" alt ="Testing">Videos</a></li>
                     </ul>
                 </nav>
-                <a class="cta" href="./Contact/index.html" alt="Contact me"><Button>Contact me</Button></a>
+                <a href="./Contact/index.html" alt="Contact me"><Button id="but">Contact me</Button></a>
             </header>
-            <!--<h1 class="title">Ma<a class ="hidden_link" href="https://www.chess.com/home">t</a>thew Dunn</h1>-->
-            <!--<div>
-                <p id="header1" style="sans-serif; font-size: 60px; color: white; position: relative; top: 15px; left: 15px;">Matthew Dunn</p>
-                <iframe style="position: relative; top: 15px; left: 15px; align-items: center" src="https://open.spotify.com/embed/playlist/1TrxLqhOZ5hIpzhzxGKwet" width="400" height="480" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+            <!--<div id="main">
+                <div class="right"></div>
+                <div class="left"></div>
             </div>-->
+            <main>
+                <div id="home_page">
+                    <img src="../me(crop).png" alt="me">
+                    <div id="para1">
+                        <h1>Who is me</h1>
+                        <br>
+                        <p>I<a href="./download.txt" download>'</a>m Matthew Dunn</p><br>
+                        <p>An 18 year old student studying in scotland and will be going to University to study Mechanical Engineering as of September 2021</p><br>
+                        <p>Donations are also greatly appreciated as I am in crippling debt</p>
+                    </div>
+                </div>
+            </main>
         </body>
 </html>
