--- a/Contact/index.html
+++ b/Contact/index.html
@@ -1,23 +1,24 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <title>Contact Me</title>
+        <title>Matthew Dunn | Contact Me</title>
         <link href="../styles.css" rel="stylesheet">
+        <link rel="shortcut icon" href="../me.png" />
     </head>
-    <body>
-        <header>
-            <nav>
-                <ul class="nav_links">
-                    <li><a class="cta" href="../index.html"><Button>Home</Button></a></li>
-                    <li><a href="https://www.paypal.com/paypalme/matthewdunnn" alt="PayPal" target="blank">Donate</a></li>
-                    <li><a href="https://www.twitch.tv/maffooBoyz" alt="Twitch" target="blank">Twitch</a></li>
-                    <li><a href="../Projects/index.html">Testing, but on the contact page</a></li>
-                </ul>
-            </nav>
-            <a class="cta" id="Contact" href="#"><Button>Contact me</Button></a>
-        </header>
-        <div>
-            <img src="./me.jpg">
-        </div>
-    </body>
+        <body>
+            <header>
+                <nav>
+                    <ul class="nav_links">
+                        <li><a id="home_button" href="../index.html"><Button>Home</Button></a></li>
+                        <li><a class="cta" href="https://www.paypal.com/paypalme/matthewdunnn" alt="PayPal" target="blank">Donate</a></li>
+                        <li><a class="cta" href="https://www.twitch.tv/maffooBoyz" alt="Twitch" target="blank">Twitch</a></li>
+                        <li><a class="cta" href="../Projects/index.html">Videos</a></li>
+                    </ul>
+                </nav>
+                <a id="Contact" href="#"><Button>Contact me</Button></a>
+            </header>
+            <div>
+                <!--<img style="margin: 20px;"" height="20%" width="20%" src="./me.jpg">-->
+            </div>
+        </body>
 </html>
