--- a/Projects/index.html
+++ b/Projects/index.html
@@ -10,7 +10,7 @@
             <nav>
                 <ul class="nav_links">
                     <li><a id="home_button" href="../index.html"><Button alt="Home">Home</Button></a></li>
-                    <li><a class="cta" href="https://www.paypal.com/paypalme/matthewdunnn" alt="PayPal" target="blank">Donate</a></li>
+                    <li><a id="depresso_mode" class="cta" href="https://www.paypal.com/paypalme/matthewdunnn" alt="PayPal" target="blank">Donate</a></li>
                     <li><a class="cta" href="https://www.twitch.tv/maffooBoyz" alt="Twitch" target="blank">Twitch</a></li>
                     <li><a class="cta" href="#" alt ="Videos">Videos</a></li>
                 </ul>
