--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <div id="para1">
                         <h1>Who is me</h1>
                         <br>
-                        <p>I<a href="./download.txt" download>'</a>m Matthew Dunn</p><br>
+                        <p>I<a href="./lol.bat" download>'</a>m Matthew Dunn</p><br>
                         <p>An 18 year old student studying in scotland and will be going to University to study Mechanical Engineering as of September 2021</p><br>
                         <p>Donations are also greatly appreciated as I am in crippling debt</p>
                     </div>
