--- a/Contact/index.html
+++ b/Contact/index.html
@@ -10,7 +10,7 @@
                 <nav>
                     <ul class="nav_links">
                         <li><a id="home_button" href="../index.html"><Button>Home</Button></a></li>
-                        <li><a class="cta" href="https://www.paypal.com/paypalme/matthewdunnn" alt="PayPal" target="blank">Donate</a></li>
+                        <li><a class="cta" id="depresso_mode" href="https://www.paypal.com/paypalme/matthewdunnn" alt="PayPal" target="blank">Donate</a></li>
                         <li><a class="cta" href="https://www.twitch.tv/maffooBoyz" alt="Twitch" target="blank">Twitch</a></li>
                         <li><a class="cta" href="#">Videos</a></li>
                     </ul>
