--- a/Contact/index.html
+++ b/Contact/index.html
@@ -12,7 +12,7 @@
                         <li><a id="home_button" href="../index.html"><Button>Home</Button></a></li>
                         <li><a class="cta" id="depresso_mode" href="https://www.paypal.com/paypalme/matthewdunnn" alt="PayPal" target="blank">Donate</a></li>
                         <li><a class="cta" href="https://www.twitch.tv/maffooBoyz" alt="Twitch" target="blank">Twitch</a></li>
-                        <li><a class="cta" href="#">Videos</a></li>
+                        <li><a class="cta" href="../projects/index.html">Videos</a></li>
                     </ul>
                 </nav>
                 <a id="Contact" href="#"><Button>Contact me</Button></a>
